# ECUEmulator

./: .gitignore  Cargo.toml  Dockerfile  README.md  ci-rust.sh  docker-compose.yml
.github/workflows/: main-release.yml  pr-docker.yml  release.yml  rust.yml
data/: sample_config.toml
docker/: entrypoint.sh
ecu_emulator_macros/: Cargo.toml
ecu_emulator_macros/ecu_emulator_macros_derive/: Cargo.toml
ecu_emulator_macros/ecu_emulator_macros_derive/src/: lib.rs
ecu_emulator_macros/src/: lib.rs  padded_enum.rs
src/: lib.rs  main.rs
src/can_manager/: errors.rs  mod.rs  socket_manager.rs
src/config/: channel_parser.rs  config_loader.rs  config_representation.rs  mod.rs  serde_binary_deserialize.rs  serde_deserializer.rs  state_storage.rs
src/config/channels/: generic_channel_config.rs  mod.rs
src/message_handling/: generic_channel.rs  message_handler.rs  mod.rs
src/protocol/: can_message.rs  commands.rs  message.rs  message_conversion.rs  mod.rs  payloads.rs  raw_can_message.rs
src/protocol/channels/: generic_channel.rs  mod.rs
tests/: message_handling_fields.rs  message_handling_heartbeat.rs  message_handling_parameters.rs  message_handling_registration.rs  message_handling_telemetry_updates.rs
tests/common/: mod.rs
