[package]
name = "ECUEmulator"
version = "0.1.0"
edition = "2021"
rust-version = "1.91.0"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
socketcan = "3.5.0"
modular-bitfield = "0.13.0"
static_assertions = "1.1.0"
zerocopy = "0.8.27"
zerocopy-derive = "0.8.27"
thiserror = "2.0.17"
enum_dispatch = "0.3.13"
ecu_emulator_macros = { path = "ecu_emulator_macros" }
ecu_emulator_macros_derive = { path = "ecu_emulator_macros/ecu_emulator_macros_derive" }
toml = "0.9.8"
anyhow = "1.0.100"
clap = { version = "4.5.52", features = ["derive"] }
num-bigint = "0.4.6"
num-traits = "0.2.19"
config = "0.15.19"
serde = { version = "1.0.228", features = ["derive"] }
